# decision-transformer

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/: ttr_grid_any_step.csv  ttr_grid_last_step.csv  ttr_grid_tail_mL.csv  ttr_summary.md
configs/: data.yaml  dpe.yaml  model_dt.yaml  trainer.yaml
notes/: design.md
scripts/: run_dt_baseline.py  run_seq_sanity.py  run_tokens_sanity.py  run_ttr_eval.py  setup_env.sh
src/im12dt/data/: dataset_seq.py  sequence_builder.py  utils_io.py
src/im12dt/models/: autoencoder.py  model_dt.py  temporal_embed.py  tokens.py
src/im12dt/training/: trainer_dt.py
src/im12dt/utils/: logging.py  registry.py  seed.py  timer.py
